Avoid test compile warnings